# image-lyrics

./: .gitignore  LICENSE  README.md  answer-service.ipynb  answer_relevance.ipynb  bleu_score.py  bot.ipynb  chunking.ipynb  document-service.ipynb  image-captioner-service.ipynb  image_captioning.ipynb  main_app.ipynb  metrics.ipynb  metrics.py  metrics_k.ipynb  plot.ipynb  preprocess_dataset.ipynb  prompt-service.ipynb  pyproject.toml  rag.py  ragas.ipynb  singdex.ipynb
docs/dexcriptions/: abomasnow.txt  abra.txt  absol.txt  accelgor.txt  aegislash.txt  aerodactyl.txt  aggron.txt  aipom.txt  alakazam.txt  alcremie.txt  alomomola.txt  altaria.txt  amaura.txt  ambipom.txt  amoonguss.txt  ampharos.txt  annihilape.txt  anorith.txt  appletun.txt  applin.txt  araquanid.txt  arbok.txt  arboliva.txt  arcanine.txt  arceus.txt  archen.txt  archeops.txt  arctibax.txt  arctovish.txt  arctozolt.txt  ariados.txt  armaldo.txt  armarouge.txt  aromatisse.txt  aron.txt  arrokuda.txt  articuno.txt  audino.txt  aurorus.txt  avalugg.txt  (+941 more)
docs/lyrics/: 0.txt  10.txt  100.txt  1000.txt  1001.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1015.txt  1016.txt  1017.txt  1019.txt  1020.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  1033.txt  1034.txt  1035.txt  1036.txt  1037.txt  1038.txt  (+4285 more)
