[tool.poetry]
name = "image-lyrics"
version = "0.1.0"
description = "An image says more than a thousand words! Write your own lyrics from images :)"
authors = ["Paula Oseroff <oseroffp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.0.1"
langchain = "^0.3.1"
langchain-community = "^0.3.1"
sentence-transformers = "^3.1.1"
chromadb = "^0.5.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
