[tool.poetry]
name = "image-lyrics"
version = "0.1.0"
description = "An image says more than a thousand words! Write your own lyrics from images :)"
authors = ["Sol Konfederak <skonfederak@itba.edu.ar>", "Paula Oseroff <oseroffp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.0.1"
sentence-transformers = "^3.1.1"
chromadb = "^0.5.11"
ragas = "^0.1.21"
bert-score = "^0.3.13"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
